@@ -2060,7 +2060,7 @@ ACCMSGS=OFF
 #    CHANNELAUCTION, LANGUAGES, COMBATSTATS, MQLCACHE, ITEMGENCACHE,
 #    DEATHCRY, DIS955RULE, RANDOMQUESTS, AUTOAWARDS, FATIGUE, 
 #    UNLEVELXP, UNLEVEL, NPCAUTOAWARDS, CHARCRSTAT, CHARCRRACE,
-#    CHARCRCLASS, CHARCRGENDER
+#    CHARCRCLASS, CHARCRGENDER, FULLSTATS
 #
 # The default value is COMMAND_POSE, which disables the pose command, 
 #    along with QUITREASON and RETIREREASON, which are useless.
