@@ -584,6 +584,7 @@ public class CMProps extends Properties
 		ANIMAL_ORDER_LIST,
 		PERSONALITY_TRAITS,
 		LLM_ADMIN_RAGS,
+		LMT_STATS,
 		WEATHER_CLEAR, // try to always and forever keep these at the end...
 		WEATHER_CLOUDY, // try to always and forever keep these at the end...
 		WEATHER_WINDY, // try to always and forever keep these at the end...
