@@ -2026,3 +2026,10 @@ PERSONALITY_TRAITS=\
 	Aggressive,Dishonest,Abrasive,Detached,Hot-tempered,\
 	Violent,Selfish,Murderous,Calculating,Unforgiving;
 
+LMT_STATS=  HITS, MANA, MOVE, HUNGER, THIRST, FATIGUE, MAXHITS, \
+			MAXMANA, MAXMOVE, MAXHUNGER, MAXTHIRST, MAXFATIGUE, \
+			STRENGTH, INTELLIGENCE, DEXTERITY, CONSTITUTION, \
+			CHARISMA, WISDOM, GENDER, MAXSTRENGTH, MAXINTELLIGENCE, \
+			MAXDEXTERITY, MAXCONSTITUTION, MAXCHARISMA, MAXWISDOM, \
+			AGE, LEVEL, WEIGHT, QUESTPOINTS, TRAINS, PRACTICES, \
+			ALIGNMENT, INCLINATION
