@@ -9,6 +9,7 @@
   8. FLEE now prefers the previous room direction.
   9. TRAINing now prompts the user to confirm.
  10. AWARDS/AutoProperties can now be modified from the CL.
+ 11. STAT command can be limited with FULSTATS disable flag and lists.ini file.
 
 # Build 5.10.5 Release 07/12/2025
   *  DATABASE CHANGED! (new CMCDAC table)
